@@ -3,6 +3,7 @@ uoproxy (0.1.1) unstable; urgency=low
   * corrected the getopt string
   * remember equip packets
   * parse encoded speech
+  * new command "%drop" which drops the item currently held
 
  --
 
